Fix gap in footer background color at smallest size.

--- a/source/stylesheets/all.css.scss
+++ b/source/stylesheets/all.css.scss
@@ -409,5 +409,5 @@ img {
 /* Set the fixed height of the footer here */
 #push,
 #footer {
-  height: 170px;
+  height: 210px;
 }
